feat(lockfile-parser): npm lockfile parser.

--- a/packages/lockfile-parser/package.json
+++ b/packages/lockfile-parser/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "neverthrow": "catalog:",
+    "semver": "catalog:",
     "zod": "catalog:"
   },
   "devDependencies": {
     "@types/bun": "catalog:types",
+    "@types/semver": "catalog:types",
     "typescript": "catalog:"
   }
 }
