--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "catalog": {
       "@t3-oss/env-core": "^0.13.8",
       "neverthrow": "^8.2.0",
+      "semver": "^7.7.3",
       "typescript": "^5.9.3",
       "zod": "^4.1.13"
     },
     "catalogs": {
       "types": {
-        "@types/bun": "^1.3.4"
+        "@types/bun": "^1.3.4",
+        "@types/semver": "^7.7.1"
       }
     }
   },
