--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
       "@t3-oss/env-core": "^0.13.8",
       "neverthrow": "^8.2.0",
       "semver": "^7.7.3",
+      "@standard-schema/spec": "^1.1.0",
       "typescript": "^5.9.3",
       "zod": "^4.1.13"
     },
