feat(json-parser): implemented the logic and added tests for zod.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
       "neverthrow": "^8.2.0",
       "semver": "^7.7.3",
       "@standard-schema/spec": "^1.1.0",
+      "@standard-schema/utils": "^0.3.0",
       "typescript": "^5.9.3",
       "zod": "^4.1.13"
     },
