feature(json-parser): use constants from test-utilities package.

--- a/packages/json-parser/package.json
+++ b/packages/json-parser/package.json
@@ -12,6 +12,7 @@
     "zod": "catalog:"
   },
   "devDependencies": {
+    "@es-vanguard/test-utilities": "workspace:*",
     "@es-vanguard/typescript-config": "workspace:*",
     "@types/bun": "catalog:types",
     "typescript": "catalog:"
