--- a/packages/json-parser/package.json
+++ b/packages/json-parser/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@es-vanguard/json-parser",
   "type": "module",
+  "exports": {
+    ".": "./src/index.ts"
+  },
   "scripts": {
     "start": "bun run src/index.ts",
     "type-check": "tsc --noEmit"
