--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -3,7 +3,8 @@
   "type": "module",
   "scripts": {
     "start": "bun run src/index.ts",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "try": "bun run src/try.ts"
   },
   "dependencies": {
     "neverthrow": "catalog:",
