feat(cli): remove unnecessary runtime option, extract package manager type.

--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "neverthrow": "catalog:",
+    "package-manager-detector": "^1.6.0",
     "zod": "catalog:"
   },
   "devDependencies": {
