feat(lockfile-parser/pnpm): parser for lockfile version 9.

--- a/packages/lockfile-parser/package.json
+++ b/packages/lockfile-parser/package.json
@@ -4,10 +4,12 @@
   "scripts": {
     "start": "bun run src/index.ts",
     "type-check": "bunx --bun tsc --noEmit",
+    "try": "bun run tests/try.ts",
     "test:npm": "bun test tests/npm",
     "test:npm:schema": "bun test tests/npm/schema.test.ts",
     "test:npm:parser": "bun test tests/npm/parser.test.ts",
-    "test:pnpm": "bun test tests/pnpm"
+    "test:pnpm": "bun test tests/pnpm",
+    "test:pnpm:parser": "bun test tests/pnpm/parser.test.ts"
   },
   "dependencies": {
     "@es-vanguard/json-parser": "workspace:*",
