--- a/packages/lockfile-parser/package.json
+++ b/packages/lockfile-parser/package.json
@@ -9,7 +9,8 @@
     "test:npm:schema": "bun test tests/npm/schema.test.ts",
     "test:npm:parser": "bun test tests/npm/parser.test.ts",
     "test:pnpm": "bun test tests/pnpm",
-    "test:pnpm:parser": "bun test tests/pnpm/parser.test.ts"
+    "test:pnpm:parser": "bun test tests/pnpm/parser.test.ts",
+    "test:pnpm:v9-schema": "bun test tests/pnpm/v9-schema.test.ts"
   },
   "dependencies": {
     "@es-vanguard/json-parser": "workspace:*",
