--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,7 @@
 # Enforce LF line endings for all text files to ensure consistency
 * text=auto eol=lf
+
+# Force GitHub to treat the these folders as source code
+services/** linguist-vendored=false
+services/** linguist-documentation=false
+services/** linguist-generated=false
