--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     ],
     "catalog": {
       "@t3-oss/env-core": "^0.13.8",
+      "hono": "^4.11.3",
       "neverthrow": "^8.2.0",
       "semver": "^7.7.3",
       "@standard-schema/spec": "^1.1.0",
