--- a/services/manager/package.json
+++ b/services/manager/package.json
@@ -2,7 +2,7 @@
   "name": "@es-vanguard/manager",
   "type": "module",
   "scripts": {
-    "start": "bun run src/index.ts",
+    "dev": "bun --watch run src/index.ts",
     "type-check": "tsc --noEmit",
     "try": "bun run tests/try.ts"
   },
