--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -14,6 +14,7 @@
     "typescript": "catalog:"
   },
   "exports": {
-    "./constants/*": "./src/core/constants/*.ts"
+    "./constants/*": "./src/core/constants/*.ts",
+    "./errors/*": "./src/core/errors/*.ts"
   }
 }
