feat(utils/npm): npm package name zod schema.

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -18,6 +18,7 @@
   "exports": {
     "./constants/*": "./src/core/constants/*.ts",
     "./errors/*": "./src/core/errors/*.ts",
-    "./semver": "./src/npm/semver.ts"
+    "./semver": "./src/npm/semver.ts",
+    "./npm-package-name": "./src/npm/package-name.ts"
   }
 }
