--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -2,9 +2,14 @@
   "name": "@es-vanguard/database",
   "type": "module",
   "scripts": {
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "db:check": "bunx --bun drizzle-kit check",
+    "db:generate": "bunx --bun drizzle-kit generate",
+    "db:migrate": "bunx --bun drizzle-kit migrate",
+    "db:studio": "bunx --bun drizzle-kit studio"
   },
   "dependencies": {
+    "@libsql/client": "^0.15.15",
     "@t3-oss/env-core": "catalog:",
     "drizzle-orm": "^1.0.0-beta.8-734e789",
     "neverthrow": "catalog:",
