--- a/packages/database/tsconfig.json
+++ b/packages/database/tsconfig.json
@@ -8,5 +8,5 @@
       "tests/*": ["./tests/*"]
     }
   },
-  "include": ["src/**/*", "tests/**/*"]
+  "include": ["src/**/*", "tests/**/*", "drizzle.config.ts"]
 }
