feat(database): export instance for apps and services to query.

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -21,5 +21,8 @@
     "@types/bun": "catalog:types",
     "drizzle-kit": "^1.0.0-beta.8-734e789",
     "typescript": "catalog:"
+  },
+  "exports": {
+    "./connect": "./src/connect.ts"
   }
 }
