--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -6,7 +6,8 @@
     "db:check": "bunx --bun drizzle-kit check",
     "db:generate": "bunx --bun drizzle-kit generate",
     "db:migrate": "bunx --bun drizzle-kit migrate",
-    "db:studio": "bunx --bun drizzle-kit studio"
+    "db:studio": "bunx --bun drizzle-kit studio",
+    "test:insert-tasks": "bun test tests/operations/insert-tasks.test.ts"
   },
   "dependencies": {
     "@es-vanguard/utils": "workspace:*",
