feat(analyst): parse inputs with context.

--- a/services/analyst/package.json
+++ b/services/analyst/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@es-vanguard/utils": "workspace:*",
     "neverthrow": "catalog:",
+    "serialize-error": "catalog:",
     "zod": "catalog:"
   },
   "devDependencies": {
