--- a/services/analyst/package.json
+++ b/services/analyst/package.json
@@ -7,6 +7,7 @@
     "try": "bun run tests/try.ts"
   },
   "dependencies": {
+    "@es-vanguard/telemetry": "workspace:*",
     "@es-vanguard/utils": "workspace:*",
     "neverthrow": "catalog:",
     "serialize-error": "catalog:",
