--- a/packages/telemetry/package.json
+++ b/packages/telemetry/package.json
@@ -2,7 +2,7 @@
   "name": "@es-vanguard/telemetry",
   "type": "module",
   "scripts": {
-    "compile": "tsc --project tsconfig.build.json",
+    "build": "tsc --project tsconfig.build.json",
     "type-check": "tsc --noEmit",
     "try": "bun run tests/try.ts"
   },
