refactor(analyst): replace tsconfig paths with node subpaths.

--- a/services/analyst/package.json
+++ b/services/analyst/package.json
@@ -18,5 +18,8 @@
     "@es-vanguard/typescript-config": "workspace:*",
     "@types/bun": "catalog:types",
     "typescript": "catalog:"
+  },
+  "imports": {
+    "#*": "./src/*.ts"
   }
 }
