--- a/services/analyst/package.json
+++ b/services/analyst/package.json
@@ -5,7 +5,8 @@
     "start": "bun run src/index.ts",
     "type-check": "tsc --noEmit",
     "try": "bun run tests/try.ts",
-    "test:find-dist": "bun test tests/find-dist-objects.test.ts"
+    "test:find-dist": "bun test tests/find-dist-objects.test.ts",
+    "bench": "bun run tests/benchmark.ts"
   },
   "dependencies": {
     "@es-vanguard/safe-fetch": "workspace:*",
