--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
       "@better-fetch/fetch": "^1.1.21",
       "hono": "^4.11.3",
       "neverthrow": "^8.2.0",
+      "ofetch": "^1.5.1",
       "semver": "^7.7.3",
       "serialize-error": "^12.0.0",
       "@standard-schema/spec": "^1.1.0",
