feat(analyst): try the new reasons on react-dom. make identical reasons more meaning.

--- a/.gitignore
+++ b/.gitignore
@@ -36,5 +36,6 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 # SQLite database file
 *.db
 
-# diff.txt
+# generated diff for testing
 **/diff.txt
+**/*diff.txt
